# reverse-engineering-exercises

./: .gitignore  404.html  README.md  environment.html  exercises.html  index.html  introduction.html  misc.html  print.html  searchindex.js  toc.html  toc.js  tools.html
.github/workflows/: docs.yml
1-magic-string/: Cargo.toml  README.md
1-magic-string/src/: main.rs
2-debugger-present/: Cargo.toml
2-debugger-present/src/: main.rs
3-windivert/: Cargo.toml  README.md
docs/: README.md  book.toml  mainCRTStartup.md
docs/src/: SUMMARY.md  environment.md  exercises.md  introduction.md  tools.md
docs/src/exercises/: 0-empty.md  1-no-std.md  10-file-system.md  11-boxing.md  2-magic-string.md  3-string-clone.md  4-fn_trait_object.md  5-windivert.md  6-calling-conventions.md  7-enums.md  8-tauri.md  9-thread.md
docs/src/misc/: ghidra.md  loader.md  shell.md
exercises/: 0-empty.html  1-no-std.html  2-magic-string.html  3-string-clone.html  4-fn_trait_object.html  5-windivert.html  6-calling-conventions.html  7-enums.html  8-tauri.html
exercises/1-magic-string/: Cargo.toml  README.md
exercises/2-debugger-present/: Cargo.toml
exercises/2-debugger-present/src/: main.rs
exercises/3-windivert/src/: main.rs
exercises/boxing/: Cargo.toml
exercises/boxing/src/: main.rs
exercises/calling-conventions/: Cargo.toml
exercises/calling-conventions/src/: main.rs
exercises/enums/: Cargo.toml
exercises/enums/src/: main.rs
exercises/file-system/: Cargo.toml
exercises/file-system/src/: main.rs
exercises/fn_trait_object/: Cargo.toml
exercises/fn_trait_object/src/: main.rs
exercises/manual-std/: Cargo.toml
exercises/manual-std/.cargo/: config.toml
exercises/manual-std/src/: crt.rs  logger.rs  main.rs
exercises/no-std/src/: main.rs
exercises/string-clone/: Cargo.toml  README.md
exercises/string-clone/src/: main.rs
exercises/tauri/src-tauri/: tauri.conf.json
exercises/thread/: Cargo.toml
exercises/thread/src/: main.rs
exercises/windivert/: Cargo.toml
exercises/windivert/src/: main.rs
misc/: loader.html  shell.html
misc/asm-checker/: Cargo.toml
misc/asm-checker/src/: main.rs
misc/code_injection/: Cargo.toml
misc/code_injection/src/: main.rs
no-std/: Cargo.toml
no-std/src/: main.rs
tools/pdbparser/: Cargo.toml
tools/pdbparser/src/: builder.rs  dpi.rs  main.rs  module_info.rs  parser.rs  utils.rs
tools/peanalyse/: Cargo.toml  Makefile.toml
tools/peanalyse/src/: analyser.rs  args.rs  main.rs  pe_info.rs  utils.rs
tools/pedump/: Cargo.toml
tools/pedump/src/: args.rs  dump.rs  main.rs  utils.rs
typedefs/: fnvtable.h
