[package]
name = "no-std"
version = "0.0.1"
authors = ["Jozef Podlecki"]
edition = "2018"
rust-version = "1.88"

[dependencies]
windows-sys = { version = "0.60.2", features = [
	"Win32_Foundation",
    "Win32_System_Console",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_Threading",
] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"